style.css
/* ... */
.contact-form input[type='radio'], .contact-form input[type='checkbox'] {
	margin-bottom: 13px; 
}
.contact-form label {
	margin-bottom: 3px; 
	float: none; 
	font-weight: bold; 
	display: block; 
}
.contact-form label.checkbox, .contact-form label.radio { 
	margin-bottom: 3px; 
	float: none; 
	font-weight: bold; 
	display: inline-block; 
}
.contact-form label span { 
	color: #aaa; 
	margin-left: 4px; 
	font-weight: normal; 
}


/* Wordpress.com widget styling */

#flickr_badge_wrapper {
	border: none;
	background: none;
}

/* ------------------------------------------------------------------------ 8. Footer */

#footer {
	background: #e0e0e0;
	padding: 0;
}

#footer #footer-widgets {
	padding-top: 40px;
}

#sub-floor {
	background: #000;
	padding: 10px 0;
}

#footer-links {
	float: left;
}

#sub-floor #credit {
	color: #666;
	padding: 13px 0;
	text-align: right;
	float: right;
}

#sub-floor #credit a {
	color: #999;
}

#sub-floor #credit a:hover {
	text-decoration: none;
	color: #fff;
}

/* ------------------------------------------------------------------------ 9. 404 page */

body.error404 {
	min-height: 800px;
}

#nothing-found {
	padding: 40px 0 180px;
	text-align: center;
}

#nothing-found h1 {
	font-size: 8em;
	line-height: 100%;
	color: #000;
}

#nothing-found h1 span {
	color: red;
}

#nothing-found label {
	float: none;
}

/* ------------------------------------------------------------------------ 10. Search/archive page */

#search-page-title,
#archive-page-title {
	margin-bottom: 20px;
}

#search-page-title h3,
#archive-page-title h3 { 
	color: #999;
	font-size: 14px; 
	font-weight: normal;
	margin-bottom: 0;
}

.no-results {
	padding: 20px;
}

.no-results .entry-content {
	padding: 20px 0;
}


/* ------------------------------------------------------------------------ 11. Page Templates */

/* site map */

h2#authors, h2#pages, h2#posts {
	font-weight: normal;
	border-bottom: 1px solid #eee;
	margin-top: 15px;
	margin-bottom: 15px;
	padding-left: 35px;
	background: url(images/icn-sitemap.png) no-repeat;
	background-position: 0 5px;
}

h2#pages {
	background-position: 0 -25px;
}

h2#posts {
	background-position: 0 -52px;
}

.sitemap-author-meta {
	position: relative;
	margin-top: 5px;
}

.sitemap-author-meta > img {
	border: 1px solid #eee;
	background: #f9f9f9;
	padding: 5px;
}

.sitemap-author-meta > span {
	top: -4px;
	left: -4px;
	position: absolute;
}

ul#sitemap-posts {
	margin-left: 0;
}

ul#sitemap-posts > li {
	list-style: none;
}

ul#sitemap-posts > li h3 {
	font-weight: normal;
	margin-bottom: 0;
}

ul#sitemap-posts ul {
	margin-top: 10px;
	margin-bottom: 10px;
}

/* search results */

#cse-search-results iframe {
	width: 100%;
	height: 1080px;
}

/* offline page template */

#offline-wrapper {
	width: 100%;
	height: 800px;
	text-align: center;
	display: table;
	overflow: hidden;
}

#offline-container {
	display: table-cell;
	vertical-align: middle;
}

#offline-content {
	position: relative;
	top: -50%;
}

#offline-wrapper .offline-message {
	margin: 20px 0 40px;
	padding-bottom: 40px;
	border-bottom: 1px solid #e0e0e0;
}

#offline-wrapper .offline-message p {
	font-size: 48px;
	font-weight: 900;
	line-height: 1;
}

#offline-wrapper #offline-title {
	font-size: 18px;
}

#offline-wrapper #offline-title small {
	color: #888;
	font-size: 14px;
}

/* ------------------------------------------------------------------------ 12. IE8 Styles */

#ie8 .thumbnail,
#ie8 .thumbnail a,
#ie8 .thumbnail a img {
	width: auto;
}

#ie8 .post-title a {
	display: block;
}

#ie8 .format-image img {
	width: auto\9;
}

#ie8 body .entry-content .wp-caption {
	background: #f6f6f6;
}

#ie8 body .post .thumbnail {
	width: 150px;
	height: 150px;
}

#ie8 body .format-image .entry-content img,
#ie8 body .format-image .entry-content a {
	min-width: 100%;
	max-width: 100%;
}

#ie8 body .format-video .entry-content > * {
	margin-top: -20px;
}

#ie8 body .post.format-status .post-header {
	border: 1px solid #f6f6f6;
}

#ie8 body #comments .comment-container .avatar-holder {
	width: 50px;
}

#ie8 body #comment-form-avatar img {
	min-width: 50px;
	min-height: 50px;
}

#ie8 .nav-collapse {
	float: left;
}

/* ------------------------------------------------------------------------ 13. inline-grid */

.inline-grid { display: block; overflow: hidden; }
.inline-grid>li { display: block; height: auto; float: left; }

.inline-grid.two-up { margin-left: -4% }
.inline-grid.two-up>li { margin-left: 4%; width: 46%; margin-bottom: 4%;}
.inline-grid.two-up>li:nth-child(2n+1) {clear: left;}

.inline-grid.three-up { margin-left: -2% }
.inline-grid.three-up>li { margin-left: 2%; width: 31.2%; margin-bottom: 2%;}
.inline-grid.three-up>li:nth-child(3n+1) {clear: left;}

.inline-grid.four-up { margin-left: -2% }
.inline-grid.four-up>li { margin-left: 2%; width: 23%; margin-bottom: 2%;}
.inline-grid.four-up>li:nth-child(4n+1) {clear: left;}

.inline-grid.five-up { margin-left: -1.5% }
.inline-grid.five-up>li { margin-left: 1.5%; width: 18.5%; margin-bottom: 1.5%;}
.inline-grid.five-up>li:nth-child(5n+1) {clear: left;}
/* ... */

